[overview] TxHistory: fix unmined ticket alignement. (#3352)

--- a/app/components/shared/TxHistory/TxHistory.module.css
+++ b/app/components/shared/TxHistory/TxHistory.module.css
@@ -162,7 +162,7 @@
 }
 
 .tooltip {
-  display: flex;
+  display: flex !important;
   justify-content: flex-end;
 }
 
